tests/cargo-ui/unstable-attr/invalid/expected
error: failed to parse `#[kani::unstable]`: expected "key = value" pair, but found `feature("invalid_args")`
lib.rs\
|\
| #[kani::unstable(reason = "just checking", issue = "<link>")]\
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\
|\
= note: expected format: `#[kani::unstable(feature="<IDENTIFIER>", issue="<OPTIONAL_ISSUE>", reason="<OPTIONAL_DESCRIPTION>")]`

error: failed to parse `#[kani::unstable]`: expected "key = value" pair, but found `1010`
lib.rs\
|\
| #[kani::unstable(feature("invalid_args"))]\
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\
|\
= note: expected format: `#[kani::unstable(feature="<IDENTIFIER>", issue="<OPTIONAL_ISSUE>", reason="<OPTIONAL_DESCRIPTION>")]`

error: failed to parse `#[kani::unstable]`: expected "key = value" pair, but found `feature`
lib.rs\
|\
| #[kani::unstable(feature, issue)]\
| ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\
|\
= note: expected format: `#[kani::unstable(feature="<IDENTIFIER>", issue="<OPTIONAL_ISSUE>", reason="<OPTIONAL_DESCRIPTION>")]`

error: failed to parse `#[kani::unstable]`: missing feature identifier
lib.rs\
|\
| #[kani::unstable(1010)]\
| ^^^^^^^^^^^^^^^^^^^^^^^\
|\
= note: expected format: `#[kani::unstable(feature="<IDENTIFIER>", issue="<OPTIONAL_ISSUE>", reason="<OPTIONAL_DESCRIPTION>")]`
